- Redid glob matching. Escaping is now ripped out for normal bans (as it should be), this
  means no longer weird issues with +b *\* etc not banning nicks with \ in it.
  ExtBan ~c/~r get special treatment and will use our match_esc [match with escaping]
  routine, that way you can ban channels such as "#f*ck" via "+b ~c:#f\*ck".
  Fix triggered by bugreport of vonitsanet (#0002782).
** public 3.2.4-rc3 release **
- No changes (except version number)
** 3.2.4 release **
- Fixed amd64 problem regarding /*LINE always saying 'The time you specified is out of range',
  reported and test shell provided by Tauop.
- Updated example.bg.conf, the one shipped with 3.2.4 had several errors.
- The '?' wildcard was completely broken in 3.2.4, reported by tabrisnet (#0002797).
- Added unreal32docs.ru.html, translated by Bock.
- Version number NOT changed.
** Fixed 3.2.4 release **
- Updated autoconf/configure.in to make newer autoconf's work (developers only), reported
  and patch provided by Xuefer (#0002798). Also rebuilt ./configure from configure.in with
  autoconf 2.59 from my own machine.
- Updated autoconf/configure.in again (does not produce different ./configure output)
- When set::options-show-connect-notice was enabled the "*** Looking up your hostname..."
  message was not being shown (all others were). Reported by fbi (#0002820).
- Updated win32 compiling instructions; mention the free MS stuff that can be used to compile
  UnrealIRCd (untested though).
- Added CGI:IRC host spoofing support. This means you can mark specific CGI:IRC gateways as
  "trusted" and the IRCd will show the users' _real_ host/ip everywhere on IRC, instead of the
  host/ip of the CGI:IRC-gateway.
  To do so you must set 'realhost_as_password' to 1 in your cgiirc.conf. And add the
  CGI:IRC gateway(s) you fully trust to set::cgiirc::hosts.
- Fixed win32 compile problem due to CGI:IRC support, reported by therock247uk (#0002821).