@@ -45,9 +45,12 @@
 #endif
 
 DLLFUNC int m_pass(aClient *cptr, aClient *sptr, int parc, char *parv[]);
+DLLFUNC int m_webirc(aClient *cptr, aClient *sptr, int parc, char *parv[]);
 
 #define MSG_PASS 	"PASS"	
 #define TOK_PASS 	"<"	
+
+#define MSG_WEBIRC	"WEBIRC"
 
 ModuleHeader MOD_HEADER(m_pass)
   = {
@@ -61,6 +64,7 @@ ModuleHeader MOD_HEADER(m_pass)
 DLLFUNC int MOD_INIT(m_pass)(ModuleInfo *modinfo)
 {
 	add_CommandX(MSG_PASS, TOK_PASS, m_pass, 1, M_UNREGISTERED|M_USER|M_SERVER);
+	CommandAdd(modinfo->handle, MSG_WEBIRC, NULL, m_webirc, MAXPARA, M_UNREGISTERED);
 	MARK_AS_OFFICIAL_MODULE(modinfo);
 	return MOD_SUCCESS;
 }
@@ -80,13 +84,80 @@ DLLFUNC int MOD_UNLOAD(m_pass)(int module_unload)
 	return MOD_SUCCESS;
 }
 
-/***************************************************************************
- * m_pass() - Added Sat, 4 March 1989
- ***************************************************************************/
-
 #define CGIIRC_STRING     "CGIIRC_"
 #define CGIIRC_STRINGLEN  (sizeof(CGIIRC_STRING)-1)
 
+/* Does the CGI:IRC host spoofing work */
+int docgiirc(aClient *cptr, char *ip, char *host)
+{
+	if (host && !strcmp(ip, host))
+		host = NULL; /* host did not resolve, make it NULL */
+
+	/* STEP 1: Update cptr->ip */
+	if (inet_pton(AFINET, ip, &cptr->ip) <= 0)
+		return exit_client(cptr, cptr, &me, "Invalid IP address");
+
+	/* STEP 2: Update GetIP() */
+	if (cptr->user)
+	{
+		/* Kinda unsure if this is actually used.. But maybe if USER, PASS, NICK ? */
+		if (cptr->user->ip_str)
+			MyFree(cptr->user->ip_str);
+		cptr->user->ip_str = strdup(ip);
+	}
+		
+	/* STEP 3: Update cptr->hostp */
+	/* (free old) */
+	if (cptr->hostp)
+	{
+		unreal_free_hostent(cptr->hostp);
+		cptr->hostp = NULL;
+	}
+	/* (create new) */
+	if (host)
+		cptr->hostp = unreal_create_hostent(host, &cptr->ip);
+
+	/* STEP 4: Update sockhost */		
+	strlcpy(cptr->sockhost, ip, sizeof(cptr->sockhost));
+
+	/* Do not save password, return / proceed as normal instead */
+	SetCGIIRC(cptr);
+	return 0;
+}
+
+/* WEBIRC <pass> "cgiirc" <hostname> <ip> */
+DLLFUNC int m_webirc(aClient *cptr, aClient *sptr, int parc, char *parv[])
+{
+char *ip, *host, *password;
+size_t ourlen;
+ConfigItem_cgiirc *e;
+
+	if ((parc < 5) || BadPtr(parv[4]))
+	{
+		sendto_one(cptr, err_str(ERR_NEEDMOREPARAMS), me.name, "*", "WEBIRC");
+		return -1;
+	}
+
+	password = parv[1];
+	host = parv[3];
+	ip = parv[4];
+
+	/* Check if allowed host */
+	e = Find_cgiirc(sptr->username, sptr->sockhost, GetIP(sptr), CGIIRC_WEBIRC);
+	if (!e)
+		return exit_client(cptr, sptr, &me, "CGI:IRC -- No access");
+
+	/* Check password */
+	if (Auth_Check(sptr, e->auth, password) == -1)
+		return exit_client(cptr, sptr, &me, "CGI:IRC -- Invalid password");
+
+	/* And do our job.. */
+	return docgiirc(cptr, ip, host);
+}
+
+/***************************************************************************
+ * m_pass() - Added Sat, 4 March 1989
+ ***************************************************************************/
 /*
 ** m_pass
 **	parv[0] = sender prefix
@@ -108,73 +179,31 @@ DLLFUNC CMD_FUNC(m_pass)
 		    me.name, parv[0]);
 		return 0;
 	}
-	
-	if (iConf.cgiirc_hosts && iplist_onlist(iConf.cgiirc_hosts, GetIP(sptr)))
+
+	if (!strncmp(password, CGIIRC_STRING, CGIIRC_STRINGLEN))
 	{
 		char *ip, *host;
-		
-		/* Do CGI:IRC stuff here */
-		if (strncmp(password, CGIIRC_STRING, CGIIRC_STRINGLEN))
+		ConfigItem_cgiirc *e;
+
+		e = Find_cgiirc(sptr->username, sptr->sockhost, GetIP(sptr), CGIIRC_PASS);
+		if (e)
 		{
-			/* Hmm no CGIIRC_ prefix on a trusted host..
-			 * Maybe the admin added the host to the trusted CGI:IRC list but
-			 * did not configure CGI:IRC with realhost_as_password to 1.
-			 * This is scary, since this allows anyone on that CGI:IRC to spoof
-			 * hostnames, so warn about that and REFUSE the user.
+			/* Ok now we got that sorted out, proceed:
+			 * Syntax: CGIIRC_<ip>_<resolvedhostname>
+			 * The <resolvedhostname> has been checked ip->host AND host->ip by CGI:IRC itself
+			 * already so we trust it.
 			 */
-			sendto_realops("[ERROR] Trusted CGI:IRC host '%s' (which is listed in set::cgiirc::hosts) does not "
-			               "seem to have 'realhost_as_password' set to 1 in it's cgiirc.conf. This is DANGEROUS. "
-			               "Please fix ASAP or remove the ip from set::cgiirc::hosts. Client rejected.", GetIP(sptr));
-			return exit_client(cptr, sptr, &me, "Invalid CGI:IRC configuration");
+			ip = password + CGIIRC_STRINGLEN;
+			host = strchr(ip, '_');
+			if (!host)
+				return exit_client(cptr, sptr, &me, "Invalid CGI:IRC IP received");
+			*host++ = '\0';
+		
+			return docgiirc(cptr, ip, host);
 		}
-		/* Ok now we got that sorted out, proceed:
-		 * Syntax: CGIIRC_<ip>_<resolvedhostname>
-		 * The <resolvedhostname> has been checked ip->host AND host->ip by CGI:IRC itself
-		 * already so we trust it.
-		 */
-		ip = password + CGIIRC_STRINGLEN;
-		host = strchr(ip, '_');
-		if (!host)
-			return exit_client(cptr, sptr, &me, "Invalid CGI:IRC IP received");
-		*host++ = '\0';
-		
-		if (!strcmp(ip, host))
-			host = NULL; /* host did not resolve, make it NULL */
-		
-		/* STEP 1: Update cptr->ip */
-		if (inet_pton(AFINET, ip, &cptr->ip) <= 0)
-			return exit_client(cptr, cptr, &me, "Invalid IP address");
-
-		/* STEP 2: Update GetIP() */
-		if (cptr->user)
-		{
-			/* Kinda unsure if this is actually used.. But maybe if USER, PASS, NICK ? */
-			if (cptr->user->ip_str)
-				MyFree(cptr->user->ip_str);
-			cptr->user->ip_str = strdup(ip);
-		}
-		
-		/* STEP 3: Update cptr->hostp */
-		/* (free old) */
-		if (cptr->hostp)
-		{
-			unreal_free_hostent(cptr->hostp);
-			cptr->hostp = NULL;
-		}
-		/* (create new) */
-		if (host)
-			cptr->hostp = unreal_create_hostent(host, &sptr->ip);
-
-		/* STEP 4: Update sockhost */		
-		strlcpy(cptr->sockhost, ip, sizeof(cptr->sockhost));
-
-		/* Done? */
-		
-		/* Do not save password, return / proceed as normal instead */
-		SetCGIIRC(sptr);
-		return 0;
 	}
 
+	
 	PassLen = strlen(password);
 	if (cptr->passwd)
 		MyFree(cptr->passwd);
